# 2d-boatsim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: RLcontroller.cpp  RLcontroller.h  RLtraining.py  boat.cpp  boat.h  boat_policy.onnx  constants.cpp  constants.h  losguidance.cpp  losguidance.h
src/onnxruntime-linux-x64-gpu-1.24.4/: GIT_COMMIT_ID
src/onnxruntime-linux-x64-gpu-1.24.4/lib/cmake/onnxruntime/: onnxruntimeConfigVersion.cmake  onnxruntimeTargets-release.cmake
src/onnxruntime-linux-x64-gpu-1.24.4/lib/pkgconfig/: libonnxruntime.pc
